--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -1,2 +1,5 @@
-div 
-    h2 Inicia sesión
+extends ../layout/index
+
+block contenido
+    div 
+        h2.text-2xl.text-center.font-extrabold Inicia sesión
