--- a/views/auth/registro.pug
+++ b/views/auth/registro.pug
@@ -1,2 +1,5 @@
-div 
-    h2 Crea tu cuenta
+extends ../layout/index
+
+block contenido
+    div 
+        h2.text-2xl.text-center.font-extrabold Crea tu cuenta
