--- a/views/auth/registro.pug
+++ b/views/auth/registro.pug
@@ -1,5 +1,9 @@
 extends ../layout/index
 
 block contenido
-    div 
-        h2.text-2xl.text-center.font-extrabold Crea tu cuenta
+    div.py-10
+        h1.text-4xl.my-10.font-extrabold.text-center Bienes
+            span.font-normal Raíces 
+        h2.text-2xl.text-center.font-extrabold= pagina
+
+        .mt-8 
