--- a/views/layout/index.pug
+++ b/views/layout/index.pug
@@ -4,7 +4,7 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         link(rel="stylesheet", href="/css/app.css")
-        title Bienes Raíces | 
+        title Bienes Raíces | #{pagina}
     body.min-h-screen.bg-gray-50 
 
         main(class="mx-auto container mt-10 px-2")
