--- a/views/auth/registro.pug
+++ b/views/auth/registro.pug
@@ -6,4 +6,27 @@ block contenido
             span.font-normal Raíces 
         h2.text-2xl.text-center.font-extrabold= pagina
 
-        .mt-8 
+        .mt-8.mx-auto.max-w-md 
+            .bg-white.py-8.px-4.shadow
+                form.space-y-5
+                    div 
+                        label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="nombre") Nombre
+                        input#nombre.w-full.py-2.px-3.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Tu nombre" type="text" name="nombre")
+
+                    div 
+                        label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="correo") Correo
+                        input#correo.w-full.py-2.px-3.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Tu correo" type="email" name="correo")
+                    
+                    div 
+                        label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="contrasena") Contraseña
+                        input#contrasena.w-full.py-2.px-3.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Tu contraseña" type="password" name="contrasena")
+                    
+                    div 
+                        label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="repetir_contrasena") Repetir contraseña
+                        input#repetir_contrasena.w-full.py-2.px-3.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Repite tu contraseña" type="password" name="repetir_contrasena")
+
+                    div(class="flex items-center justify-between")
+                        a(class="text-gray-500 text-xs" href="/auth/login") ¿Ya tienes una cuenta? Inicia sesión 
+                        a(class="text-gray-500 text-xs" href="/auth/olvide") Olvidé mi contraseña 
+
+                    input(class="w-full bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-3 cursor-pointer" type="submit" value="Crear cuenta")
