--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -9,6 +9,7 @@ block contenido
         .mt-8.mx-auto.max-w-md 
             .bg-white.py-8.px-4.shadow
                 form.space-y-5
+                    input(type="hidden" name="_csrf" value=csrfToken)
 
                     div 
                         label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="correo") Correo
