--- a/views/layout/index.pug
+++ b/views/layout/index.pug
@@ -4,8 +4,14 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         link(rel="stylesheet", href="/css/app.css")
+        block styles
         title Bienes Raíces | #{pagina}
     body.min-h-screen.bg-gray-50 
+        if barra
+            include header
 
-        main(class="mx-auto container mt-10 px-2")
+        main(class="mx-auto max-w-7xl mt-10 px-2")
             block contenido
+
+        block scripts 
+        
