--- a/views/propiedades/crear.pug
+++ b/views/propiedades/crear.pug
@@ -11,30 +11,40 @@ block contenido
 
         a(class="rounded py-2 bg-indigo-600 hover:bg-indigo-700 text-sm px-10 font-bold text-center text-white uppercase my-5 inline-block w-full sm:w-auto" href="/mis-propiedades") Volver
 
+        if errores
+            div(class="max-w-md mx-auto my-10")
+                each error in errores 
+                    p(class="bg-red-500 text-white uppercase text-xs text-center p-2 mb-1 font-bold")= error.msg
+
         div(class="bg-white shadow py-8 px-4 rounded mx-auto max-w-4xl my-10 md:px-10")
-            form(class="space-y-8")
+            form(class="space-y-8" method= "POST" action="/propiedades/crear")
+                input(type="hidden" name="_csrf" value=csrfToken)
                 div(class="space-y-5")
                     h3.text-lg.leading-6.font-medium.text-gray-900 Información general
                     p.text-gray-600 Añade información sobre la propiedad en venta
 
                     div 
                         label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="titulo") Título del anuncio
-                        input#titulo.w-full.py-2.px-3.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Ej. Hermosa casa en la montaña" type="text" name="titulo")
+                        input#titulo.w-full.py-2.px-3.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Ej. Hermosa casa en la montaña" type="text" name="titulo" value= datos.titulo ? datos.titulo : "")
 
                     div 
                         label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="descripcion") Descripción
-                        textarea#descripcion.w-full.py-2.px-3.border.border-gray-300.rounded-md.placeholder-gray-400.h-66.resize-none(placeholder="Descripción de la propiedad" name="descripcion")
+                        textarea#descripcion.w-full.py-2.px-3.border.border-gray-300.rounded-md.placeholder-gray-400.h-66.resize-none(placeholder="Descripción de la propiedad" name="descripcion")= datos.descripcion ? datos.descripcion : ""
                     
                     div(class="md:flex md:gap-4 space-y-5 md:space-y-0")
                         div(class="md:w-1/2") 
                             label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="categoria") Categoría
                             select#categoria.w-full.py-2.px-3.border.border-gray-300.rounded-md.placeholder-gray-400(name="categoria")
                                 option(value="") -- Seleccione --
+                                each categoria in categorias
+                                    option(value=categoria.id selected= datos.categoria ? datos.categoria == categoria.id ? true : false : null)= categoria.nombre 
 
                         div(class="md:w-1/2") 
                             label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="precio") Precio
                             select#precio.w-full.py-2.px-3.border.border-gray-300.rounded-md.placeholder-gray-400(name="precio")
                                 option(value="") -- Seleccione --
+                                each precio in precios
+                                    option(value=precio.id selected= datos.precio ? datos.precio == precio.id ? true : false : null)= precio.nombre 
 
                     div(class="md:flex md:gap-4 space-y-5 md:space-y-0")
                         div(class="md:w-1/3") 
@@ -43,7 +53,7 @@ block contenido
                                 option(value="") -- Seleccione --
                                 - var n = 0;
                                     while n < 7
-                                        option(value=n) #{n++}
+                                        option(value=n selected= datos.habitaciones ? datos.habitaciones == n ? true : false : null) #{n++}
 
                         div(class="md:w-1/3") 
                             label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="estacionamientos") Estacionamientos
@@ -51,7 +61,7 @@ block contenido
                                 option(value="") -- Seleccione --
                                 - var n = 0;
                                     while n < 7
-                                        option(value=n) #{n++}
+                                        option(value=n selected= datos.estacionamientos ? datos.estacionamientos == n ? true : false : null) #{n++}
                                 
                         div(class="md:w-1/3") 
                             label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="banos") Baños
@@ -59,18 +69,20 @@ block contenido
                                 option(value="") -- Seleccione --
                                 - var n = 0;
                                     while n < 7
-                                        option(value=n) #{n++}
+                                        option(value=n selected= datos.banos ? datos.banos == n ? true : false : null) #{n++}
                     div(class="border-gray-200 border-t py-5 space-y-5")                    
                         h3.text-lg.leading-6.font-medium.text-gray-900 Ubicación
                         p.text-gray-600 Ubica la propiedad en el mapa
                         #mapa(class="h-96")
 
                         div     
-                            p.calle
+                            p.calle= datos.calle ? datos.calle : ""
 
-                        input(type="hidden" name="calle" id="calle")
-                        input(type="hidden" name="lat" id="lat")
-                        input(type="hidden" name="lng" id="lng")
+                        input(type="hidden" name="calle" id="calle" value= datos.calle ? datos.calle : "")
+                        input(type="hidden" name="lat" id="lat" value= datos.lat ? datos.lat : "")
+                        input(type="hidden" name="lng" id="lng" value= datos.lng ? datos.lng : "")
+
+                    input(class="w-full py-3 bg-indigo-600 hover:bg-indigo-700 rounded text-white font-bold uppercase cursor-pointer"  type="submit" value="Añadir imagen")
 
 block scripts
     script(src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js")
