--- a/views/layout/admin.pug
+++ b/views/layout/admin.pug
@@ -3,10 +3,11 @@ html(lang="en")
     head
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        link(rel="stylesheet", href="/css/app.css")
         block styles
+        link(rel="stylesheet", href="/css/app.css")
         title Bienes Raíces | #{pagina}
     body.min-h-screen.bg-gray-50 
+        include includes/header-admin
 
         main(class="mx-auto max-w-7xl mt-10 px-2")
             block contenido
