Ver mensajes recibidos

--- a/views/layout/includes/header-admin.pug
+++ b/views/layout/includes/header-admin.pug
@@ -5,6 +5,6 @@ header.bg-indigo-600.p-4
                         span.font-normal Raíces
 
                 nav(class="my-5 text-sm flex  gap-3 items-center font-bold text-white") 
-                    a(href="") Mis propiedades
+                    a(href="/mis-propiedades") Mis propiedades
                     a(href="") Mi perfil
                     a(class="bg-indigo-800 py-1.5 px-1.5 rounded-lg" href="") Cerrar sesión
