--- a/views/layout/includes/header-app.pug
+++ b/views/layout/includes/header-app.pug
@@ -4,6 +4,7 @@ header.bg-indigo-600.p-4
                     h1(class="text-2xl text-white font-extrabold text-center") Bienes
                         span.font-normal Raíces
 
+                //- TODO: Si esta logueado mostrar mis propiedades y cerrar sesion en los enlaces, eliminar console logs y pre
                 nav(class="my-5 text-sm flex  gap-3 items-center font-bold text-white") 
                     a(href="/auth/registro") Crear cuenta
                     a(href="/auth/login") Iniciar sesión
