--- a/views/layout/includes/header-app.pug
+++ b/views/layout/includes/header-app.pug
@@ -1,8 +1,9 @@
 header.bg-indigo-600.p-4 
             div(class="max-w-7xl mx-auto flex flex-col md:flex-row justify-between items-center")
-                a(href="/") 
-                    h1(class="text-2xl text-white font-extrabold text-center") Bienes
-                        span.font-normal Raíces
+                a(href="/")
+                    img(class="h-19 rounded-full object-cover object-center" src="/img/logo.webp", alt="Logo") 
+                    //- h1(class="text-2xl text-white font-extrabold text-center") Bienes
+                    //-     span.font-normal Raíces
 
                 nav(class="my-5 text-sm flex  gap-3 items-center font-bold text-white") 
                     if usuario
