Metros en terrenos y 0 en habitaciones, estaconamientos y baños, entidad precios no existe ni sus relaciones ya que precio es ahora un text y no select de rangos

--- a/views/templates/cardPropiedad.pug
+++ b/views/templates/cardPropiedad.pug
@@ -2,12 +2,16 @@ div(class="bg-white shadow rounded-lg")
     img(class="object-cover h-72 w-full rounded-lg" src=`/uploads/${propiedad.imagen}`, alt=`Imagen de ${propiedad.titulo}`)
     div(class="p-5 space-y-4")
         h3(class="text-xl font-bold")= propiedad.titulo
-        p(class="text-sm text-gray-600") Habitaciones:  
-            span.text-gray-800.font-bold= propiedad.habitaciones
-        p(class="text-sm text-gray-600") Baños: 
-            span.text-gray-800.font-bold= propiedad.banos
-        p(class="text-sm text-gray-600") Estacionamientos: 
-            span.text-gray-800.font-bold= propiedad.estacionamientos
-        p(class="text-sm text-gray-600") Precio: 
-            span.text-gray-800.font-bold= propiedad.precio.nombre
+        if propiedad.categoria && propiedad.categoria.nombre === 'Terreno' && propiedad.metrosCuadrados
+            p(class="text-sm text-gray-600") Metros cuadrados:
+                span.text-gray-800.font-bold  #{propiedad.metrosCuadrados} m²
+        if !(propiedad.categoria && propiedad.categoria.nombre === 'Terreno')
+            p(class="text-sm text-gray-600") Habitaciones:
+                span.text-gray-800.font-bold= propiedad.habitaciones
+            p(class="text-sm text-gray-600") Baños:
+                span.text-gray-800.font-bold= propiedad.banos
+            p(class="text-sm text-gray-600") Estacionamientos:
+                span.text-gray-800.font-bold= propiedad.estacionamientos
+        p(class="text-sm text-gray-600") Precio:
+            span.text-gray-800.font-bold $#{Number(propiedad.precio).toLocaleString()} USD
         a(class="bg-indigo-600 w-full text-center block font-bold text-white p-2 uppercase rounded" href=`/propiedad/${propiedad.id}`) Ver propiedad
