--- a/views/inicio.pug
+++ b/views/inicio.pug
@@ -22,9 +22,12 @@ block contenido
             div(class="w-full md:w-auto flex items-center gap-2")
                 label(class="text-sm w-24 uppercase text-gray-500 font-bold" for="precios") Precios
                 select(class="bg-white w-full px-3 py-2 flex-1 border border-gray-300 rounded-md shadow" id="precios")
-                    option(value="") -- Seleccione -- 
-                    each precio in precios
-                        option(value=precio.id)= precio.nombre
+                    option(value="") -- Seleccione --
+                    option(value="0-10000" data-min="0" data-max="10000") $0 - $10,000
+                    option(value="10000-50000" data-min="10000" data-max="50000") $10,000 - $50,000
+                    option(value="50000-100000" data-min="50000" data-max="100000") $50,000 - $100,000
+                    option(value="100000-300000" data-min="100000" data-max="300000") $100,000 - $300,000
+                    option(value="300000+" data-min="300000" data-max="Infinity") + $300,000
 
         div(class="h-[600px] mt-5" id="mapa-inicio")
 
