--- a/views/propiedades/editar.pug
+++ b/views/propiedades/editar.pug
@@ -32,22 +32,23 @@ block contenido
                         textarea#descripcion.w-full.py-2.px-3.border.border-gray-300.rounded-md.placeholder-gray-400.h-66.resize-none(placeholder="Descripción de la propiedad" name="descripcion")= datos.descripcion ? datos.descripcion : ""
                     
                     div(class="md:flex md:gap-4 space-y-5 md:space-y-0")
-                        div(class="md:w-1/2") 
+                        div(class="md:w-1/2")
                             label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="categoria") Categoría
                             select#categoria.w-full.py-2.px-3.border.border-gray-300.rounded-md.placeholder-gray-400(name="categoria")
                                 option(value="") -- Seleccione --
                                 each categoria in categorias
-                                    option(value=categoria.id selected= datos.idCategoria ? datos.idCategoria == categoria.id ? true : false : null)= categoria.nombre 
+                                    option(value=categoria.id data-nombre=categoria.nombre selected= (datos.idCategoria || datos.categoria) ? (datos.idCategoria || datos.categoria) == categoria.id ? true : false : null)= categoria.nombre
 
-                        div(class="md:w-1/2") 
-                            label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="precio") Precio
-                            select#precio.w-full.py-2.px-3.border.border-gray-300.rounded-md.placeholder-gray-400(name="precio")
-                                option(value="") -- Seleccione --
-                                each precio in precios
-                                    option(value=precio.id selected= datos.idPrecio ? datos.idPrecio == precio.id ? true : false : null)= precio.nombre 
+                        div(class="md:w-1/2")
+                            label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="precio") Precio (USD)
+                            input#precio.w-full.py-2.px-3.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Ej. 50000" type="number" step="0.01" min="0.01" name="precio" value= datos.precio ? datos.precio : "")
 
-                    div(class="md:flex md:gap-4 space-y-5 md:space-y-0")
-                        div(class="md:w-1/3") 
+                    div#metros-cuadrados-container(class="hidden")
+                        label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="metrosCuadrados") Metros Cuadrados
+                        input#metrosCuadrados.w-full.py-2.px-3.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Ej. 100" type="number" step="0.01" min="0.01" name="metrosCuadrados" value= datos.metrosCuadrados ? datos.metrosCuadrados : "")
+
+                    div#campos-propiedad(class="md:flex md:gap-4 space-y-5 md:space-y-0")
+                        div(class="md:w-1/3")
                             label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="habitaciones") Habitaciones
                             select#habitaciones.w-full.py-2.px-3.border.border-gray-300.rounded-md.placeholder-gray-400(name="habitaciones")
                                 option(value="") -- Seleccione --
@@ -55,15 +56,15 @@ block contenido
                                     while n < 7
                                         option(value=n selected= datos.habitaciones ? datos.habitaciones == n ? true : false : null) #{n++}
 
-                        div(class="md:w-1/3") 
+                        div(class="md:w-1/3")
                             label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="estacionamientos") Estacionamientos
                             select#estacionamientos.w-full.py-2.px-3.border.border-gray-300.rounded-md.placeholder-gray-400(name="estacionamientos")
                                 option(value="") -- Seleccione --
                                 - var n = 0;
                                     while n < 7
                                         option(value=n selected= datos.estacionamientos ? datos.estacionamientos == n ? true : false : null) #{n++}
-                                
-                        div(class="md:w-1/3") 
+
+                        div(class="md:w-1/3")
                             label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="banos") Baños
                             select#banos.w-full.py-2.px-3.border.border-gray-300.rounded-md.placeholder-gray-400(name="banos")
                                 option(value="") -- Seleccione --
@@ -90,3 +91,4 @@ block scripts
     script(src="https://unpkg.com/esri-leaflet-geocoder@2.2.13/dist/esri-leaflet-geocoder.js")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-geosearch/2.7.0/bundle.min.js")
     script(src="/js/mapa.js")
+    script(src="/js/categoriaTerreno.js")
