--- a/views/propiedades/mostrar.pug
+++ b/views/propiedades/mostrar.pug
@@ -22,14 +22,18 @@ block contenido
                     p= propiedad.descripcion
                     h2(class="text-xl leading-6 font-bold text-gray-900") Información de la propiedad
                     div(class="grid grid-cols-1 md:grid-cols-2 gap-4")
-                        p(class="text-gray-600 font-bold text-xs") Baños
-                            span(class="text-gray-800 block text-lg")= propiedad.banos
-                        p(class="text-gray-600 font-bold text-xs") Habitaciones
-                            span(class="text-gray-800 block text-lg")= propiedad.habitaciones
-                        p(class="text-gray-600 font-bold text-xs") Estacionamientos
-                            span(class="text-gray-800 block text-lg")= propiedad.estacionamientos
+                        if propiedad.categoria && propiedad.categoria.nombre === 'Terreno' && propiedad.metrosCuadrados
+                            p(class="text-gray-600 font-bold text-xs") Metros cuadrados
+                                span(class="text-gray-800 block text-lg") #{propiedad.metrosCuadrados} m²
+                        if !(propiedad.categoria && propiedad.categoria.nombre === 'Terreno')
+                            p(class="text-gray-600 font-bold text-xs") Baños
+                                span(class="text-gray-800 block text-lg")= propiedad.banos
+                            p(class="text-gray-600 font-bold text-xs") Habitaciones
+                                span(class="text-gray-800 block text-lg")= propiedad.habitaciones
+                            p(class="text-gray-600 font-bold text-xs") Estacionamientos
+                                span(class="text-gray-800 block text-lg")= propiedad.estacionamientos
                         p(class="text-gray-600 font-bold text-xs") Precio
-                            span(class="text-gray-800 block text-lg")= propiedad.precio.nombre
+                            span(class="text-gray-800 block text-lg") $#{Number(propiedad.precio).toLocaleString()} USD
 
 
             aside(class="md:w-1/3 bg-white shadow rounded-lg")
